[gd_scene load_steps=2 format=3 uid="uid://c5f6uye2fxt5n"]

[ext_resource type="Script" uid="uid://bq1amcuvvd1hr" path="res://settings/keybind_settings.gd" id="1_ijm0d"]

[node name="KeybindSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ijm0d")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0627451, 0.0627451, 0.0627451, 0.929412)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -408.0
offset_top = -198.0
offset_right = 424.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Keybindings
"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Move Left"

[node name="BindKey_move_left" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
toggle_mode = true
text = "Set Keybinding
"
metadata/BindKey_move_left = ""

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Move Right"

[node name="BindKey_move_right" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
toggle_mode = true
text = "Set Keybinding
"
metadata/BindKey_move_right = ""

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Move Up"

[node name="BindKey_move_up" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 10
toggle_mode = true
text = "Set Keybinding
"
metadata/BindKey_move_up = ""

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Move Down"

[node name="BindKey_move_down" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 10
toggle_mode = true
text = "Set Keybinding
"
metadata/BindKey_move_down = ""

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Jump"

[node name="BindKey_jump" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 10
toggle_mode = true
text = "Set Keybinding
"
metadata/BindKey_jump = ""

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
text = "Sprint"

[node name="BindKey_sprint" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 10
toggle_mode = true
text = "Set Keybinding
"
metadata/BindKey_sprint = ""

[node name="HBoxContainer7" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
text = "Interact"

[node name="BindKey_move_interact" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 10
toggle_mode = true
text = "Set Keybinding
"
metadata/BindKey_interact = ""

[node name="HBoxContainer8" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
text = "Go Back"

[node name="BindKey_back_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
size_flags_horizontal = 10
toggle_mode = true
text = "Set Keybinding
"
metadata/BindKey_go_back = ""
